buyer.log
python: can't open file 'Buyer.py': [Errno 2] No such file or directory
No command 'nhup' found, did you mean:
 Command 'nohup' from package 'coreutils' (main)
 Command 'nup' from package 'dvi2ps' (universe)
nhup: command not found
nohup: ignoring input
nohup: failed to run command '/root/git/binance/buyer.py': Permission denied
nohup: ignoring input
  File "/root/git/binance/buyer.py", line 90
    MSG = "最近周线三连阳的BTC交易对如下：\n" + "\n".join(ThreePositiveWeekKlinKEY) + "\n+@%s|n" % getNow())
                                                                                                                         ^
SyntaxError: invalid syntax
